--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -15,12 +15,9 @@
 <nav class="navbar navbar-dark bg-dark">
     <div class="container-fluid">
         <div class="navbar-brand text-white">
-            <b><span class="align-middle" th:text="${user.login}"></span></b>
+            <b><span class="align-middle" id="navbarName"></span></b>
             <span class="align-middle">with roles:</span>
-            <span class="align-middle"
-                  th:each="role : ${user.getRoles()}"
-                  th:text="${role.roleName} + ' '"
-            ></span>
+            <span class="align-middle" id="navbarRole"></span>
         </div>
         <form th:action="@{/logout}" method="post">
             <button type="submit" class="btn btn-dark text-secondary">Logout</button>
@@ -32,7 +29,7 @@
     <div class="row">
                 <div class="col-lg-2 bg-white min-vh-100">
             <ul class="nav nav-pills flex-column">
-                <br/>
+
                 <div sec:authorize="${hasRole('ROLE_ADMIN')}">
                     <li class="nav-item">
                         <a class="nav-link" href="/admin">Admin</a>
@@ -63,25 +60,21 @@
                             <div class="w-100"></div>
                             <div class="col border bg-white">
                                 <br/>
-                                <table class="table table-hover">
+                                <table class="table table-hover" id="alluser_table">
+                                    <thead>
                                     <tr>
                                         <th>Id</th>
                                         <th>Name</th>
                                         <th>Surname</th>
+                                        <th>Age</th>
                                         <th>Email</th>
+                                        <th>Login</th>
                                         <th>Roles</th>
                                     </tr>
-                                    <td th:text="${user.id}"></td>
-                                    <td th:text="${user.name}"></td>
-                                    <td th:text="${user.surname}"></td>
-                                    <td th:text="${user.email}"></td>
-                                    <td>
-                                        <a th:each="role : ${user.getRoles()}"
-                                           th:text="${role.roleName} + ' '">
-                                        </a>
-                                    </td>
-                                    </td>
+                                    </thead>
+                                    <tbody>
 
+                                    </tbody>
                                 </table>
                             </div>
                         </div>
@@ -96,6 +89,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
-
+<script src="/static/user.js"></script>
 </body>
 </html>
